--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
+<HTML>
+    <HEAD>
 
+        <link rel="stylesheet" href="style.css">
+        <TITLE>Резюме</TITLE>
+    </HEAD>
+        <BODY>    
+            <div id="header">  
+		<H1>Алексей Примадони</H1>
+		<h3>Веб разработчик</h3>
+		<p><a href="mailto:ap@somemail.com">ap@somemail.com</a>
+		   <a href="github.com/alprima">github.com/alprima</a></p>
+	    </div>
+	    <div id="main">
+		<p>Я увлекаюсь веб-дизайном со старших классов школы. Начал с мини-сайтов для себя и друзей,  потом для местных
+		   фирм и организаций. После курсов на Хекслете начал работу WEB-разработчиком. Пишу на JS(ES6), люблю функциональное 
+		   программирование. Умею работать с SQL,HTTP,Git и Ansible. Пишу тесты. </p>
+		<p> Готов к удаленной работе и релокации </p>
+		<h2> Опыт работы </h2>
+		<h4> Microsoft Россия </h4>
+		<p> Программист(стажировка), <i>апрель 2016 - ноябрь 2016</i></p>
+		<ul>
+		    <li> Работа в комманде на C#
+		    <li> Создание веб-сайта проекта JDX
+		</ul>
+		<h4> ТОО "Винная баня" </h4>
+		<p>Веб-дизайн, <i>январь 2015 - апрель 2016</i></p>
+		<ul>
+		    <li> Верстка макетов
+		    <li> Разработка тем на Wordpress
+		    <li> Поддержка сайта
+		</ul>
+		<h2> Образование </h2>
+		<h4> Университет им. Патриса Лумумбы </h4>
+		<p> Бакалавр информационных систем, <i>2012-2016</i></p>
+		<h4> Хекслет </h4>
+		<p> Курсы по программированию, JS Backend/Frontend <i>2015-2017</i></p>
+		<h2> Другие навыки и увлечения </h2>
+		<ul>
+		    <li> Основы дизайна и типографии
+		    <li> Любительская игра на гитаре
+		    <li> Хоккей на траве(городская лига)
+		</ul>
+	      </div>
+	      <div id="footer"> 
+		<p><b>Алексей Примадонин</b></p>
+		<p>ул. Полевая, 12, Астрахань, Россия +78881270001 <a href="mailto:ap@somemail.com">ap@somemail.com</a>
+	      </div>
+        </BODY>
+</HTML>
